Correct spacing

--- a/src/app/pages/housekeeping/bathroom/bathroom.component.css
+++ b/src/app/pages/housekeeping/bathroom/bathroom.component.css
@@ -1,18 +1,22 @@
 
 /* display a picture in the bigger screen */
-:host {
+.main-content {
   display: block;
   min-height: 100vh;
   background-image: url('/bathroom_background.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  background-position-y: 40%;
+  padding-top: 20px;
 
 }
 
-/* .m-0 {
-  color: #db5f2b;
-} */
+/* bathroom header style */
+.bathroom-headers {
+  background-color: #db5f2b;
+  padding-bottom: 20px;
+}
 
 /* style the home button */
 .btn.custom-btn-home  {
